--- a/AMFairy/AMFairy.csproj
+++ b/AMFairy/AMFairy.csproj
@@ -54,6 +54,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="GraphicsHelper.cs" />
+    <Compile Include="HotkeyHelper.cs" />
     <Compile Include="MessageHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
